Target demo.tar

--- a/like_gun/Makefile
+++ b/like_gun/Makefile
@@ -4,8 +4,12 @@ notes.aux: notes.tex fig_d.pdf
 	pdflatex notes
 notes.pdf: notes.aux
 	pdflatex notes
+#https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html
+demo.tar: cmf_models.py markup.py calc.py
+	tar -cf $@ $^
+
 ###---------------
 ### Local Variables:
-### eval: (TeX-PDF-mode)
+### eval: (makefile-mode)
 ### eval: (setq ispell-personal-dictionary "./localdict")
 ### End:
