make notes.pdf works

--- a/like_gun/Makefile
+++ b/like_gun/Makefile
@@ -6,13 +6,20 @@
 #user	0m37.468s
 #sys	0m0.268s
 
-fig_d.pdf: calc.py   # Makes fig_d.pdf and fig_fve.pdf
-	python calc.py
 basis.pdf: basis.py
 	python basis.py $@
 D_test.pdf: calc.py
 	python calc.py test
-FIGURES = D_test.pdf basis.pdf fig_d.pdf
+d_hat_test.pdf errors_test.pdf opt_result.pdf vt_test.pdf: D_test.pdf
+	echo making $^ made $@ too
+fig_d.pdf: calc.py   # Makes fig_d.pdf and fig_fve.pdf
+	python calc.py
+fig_fve.pdf: fig_d.pdf
+	echo making $^ made $@ too
+BD_test.pdf: calc.py
+	python calc.py BD
+FIGURES = basis.pdf vt_test.pdf D_test.pdf BD_test.pdf opt_result.pdf	\
+fig_d.pdf fig_fve.pdf
 notes.aux: notes.tex ${FIGURES}
 	pdflatex notes
 notes.pdf: notes.aux ${FIGURES}
