--- a/like_gun/Makefile
+++ b/like_gun/Makefile
@@ -1,32 +1,23 @@
 # Use python2 rather than python3 because debian doesn't have a
 # python3 cvxopt version.
 
-# rm *.pdf; time make notes.pdf on orr yields:
-#real	0m38.919s
-#user	0m37.468s
-#sys	0m0.268s
+# rm *.pdf; time make notes.pdf reports 0m51.413s on an intel G3220 @ 3.00GHz cpu
+
+# FIGURES is a list of all figures required for notes.pdf.  See these docs:
+#https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html
+#https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
+FIG_ROOT = D_gun vt_gun BD_gun opt_result big_d fve_gun
+FIGURES = $(patsubst %, figs/%.pdf, ${FIG_ROOT}) basis.pdf
+
+figs/%.pdf: plot.py
+	python plot.py --$* $*.pdf
 
 basis.pdf: basis.py
 	python basis.py $@
-D_test.pdf: calc.py
-	python calc.py test
-d_hat_test.pdf errors_test.pdf opt_result.pdf vt_test.pdf: D_test.pdf
-	echo making $^ made $@ too
-fig_d.pdf: calc.py   # Makes fig_d.pdf and fig_fve.pdf
-	python calc.py
-fig_fve.pdf: fig_d.pdf
-	echo making $^ made $@ too
-BD_test.pdf: calc.py
-	python calc.py BD
-FIGURES = basis.pdf vt_test.pdf D_test.pdf BD_test.pdf opt_result.pdf	\
-fig_d.pdf fig_fve.pdf
 notes.aux: notes.tex ${FIGURES}
 	pdflatex notes
 notes.pdf: notes.aux ${FIGURES}
 	pdflatex notes
-#https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html
-demo.tar: cmf_models.py markup.py calc.py
-	tar -cf $@ $^
 
 ###---------------
 ### Local Variables:
