Shuffle sections of notes.tex and clarify.
Also small changes code that are improvements and get plots to match
notation in notes.tex.  For the EOS prior and the gun experiment,
notes.tex is clear enough for me.  Next steps are to add more
experiments.

--- a/like_gun/Makefile
+++ b/like_gun/Makefile
@@ -15,12 +15,14 @@
 FIG_ROOT = C_gun vt_gun BC_gun opt_result big_d fve_gun
 FIGURES = $(patsubst %, figs/%.pdf, ${FIG_ROOT}) basis.pdf
 
+CODE = plot.py fit.py eos.py gun.py
+
 notes.pdf: notes.aux ${FIGURES}
 	pdflatex notes
 notes.aux: notes.tex ${FIGURES}
 	pdflatex notes
 
-figs/%.pdf: plot.py
+figs/%.pdf: ${CODE}
 	python plot.py --$* $*.pdf
 
 basis.pdf: basis.py
